[package]
name = "janql"
version = "0.1.0"
edition = "2024"
description = "JanQL is a lightweight, persistent key-value store written in Rust."
license = "MIT"

[features]
comparison = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
criterion = "0.5"
rstest = "0.26.1"
tempfile = "3.24.0"
sled = "0.34"
rand = "0.8"

[[bench]]
name = "benchmark_main"
harness = false

[[bench]]
name = "comparison"
harness = false
required-features = ["comparison"]
